--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cite It Out</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-    <div id="content">
-        <h1>Cite Out It</h1>
-        <button onclick="changePage('start')">Start game</button>
+    <div class="container" id="content">
+        <div class="items-container">
+            <h1 class="game-title">Cite It Out</h1>
+            <button class="button" onclick="changePage('start')">Start game</button>
+        </div>
+        <div class="how-to-container" id="how-to-container">
+            <div><button class="exit-button" id="exit-button" onclick="toggleHelp()">X</button></div>
+            <h2>How to play?</h2>
+            <p>The game starts by providing a category. Each player will quickly try to give a word that fits into the given category under a limited time. When the time is up, the player who was not able to answer will do a punishment. The punishment will depend on what the party has decided.</p>
+        </div>
     </div>
+    <p class="how-to-button" onclick="toggleHelp()">How to play?</p>
     <script src="./resources/js/script.js"></script>
 </body>
 </html>
